[project]
name = "aws-bill-analyser"
version = "0.1.0"
description = "AWS billing analysis actions for Sema4.ai agents"
dependencies = [
    "boto3>=1.34.0",
    "sema4ai-actions",
    "pydantic>=2.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "--capture=no"

[tool.mypy]
mypy_path = "src:tests"
strict = true
